@@ -1,0 +1,7 @@
+Source: blah
+Maintainer: Joe Maintainer <joe@example.com>
+Homepage: http://example.com/blah/trac/
+
+Package: blah
+Description: blah
+ blah blah
